QmlModels: Fix enum resolution in ListElement

There were two problems:
a, We need to allow recursion when querying for enums. Otherwise we
   cannot find enums in the same document.
b, when the enum resolution is done in the validation phase, we cannot
   query the current document's QQmlType for enums, yet, as it's not
   finalized. However, the QQmlPropertyValidator has the
   QQmlPropertyCache we're looking for in that case.
c, As a drive-by, fix the excessive conversions between QByteArray and
   QString.

Pick-to: 6.4
Fixes: QTBUG-95864
Change-Id: If0d2687986e1483a27ce11373a204235b92a6efd
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>