tests/auto/qml/qqmllistmodel/data/enumsInListElement.qml
@@ -1,0 +1,8 @@
+import QtQuick
+
+ListView {
+    width: 180
+    height: 200
+    model: Model {}
+    delegate: Text { text: choose }
+}
