tests/auto/qml/qqmllistmodel/tst_qqmllistmodel.cpp
@@ -4,6 +4,7 @@
 #include <QtQuick/private/qquickitem_p.h>
 #include <QtQuick/private/qquicktext_p.h>
 #include <QtQuick/private/qquickanimation_p.h>
+#include <QtQuick/private/qquicklistview_p.h>
 #include <QtQml/private/qqmlengine_p.h>
 #include <QtQmlModels/private/qqmllistmodel_p.h>
 #include <QtQml/private/qqmlexpression_p.h>
@@ -116,6 +117,7 @@ private slots:
     void listElementWithTemplateString();
     void destroyComponentObject();
     void objectOwnershipFlip();
+    void enumsInListElement();
 };
 
 bool tst_qqmllistmodel::compareVariantList(const QVariantList &testList, QVariant object)
@@ -1889,6 +1891,22 @@ void tst_qqmllistmodel::objectOwnershipFlip()
     QMetaObject::invokeMethod(root.data(), "checkItem");
 
     QCOMPARE(QJSEngine::objectOwnership(item.data()), QJSEngine::CppOwnership);
+}
+
+void tst_qqmllistmodel::enumsInListElement()
+{
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("enumsInListElement.qml"));
+    QVERIFY2(component.isReady(), qPrintable(component.errorString()));
+    QScopedPointer<QObject> root(component.create());
+    QVERIFY(!root.isNull());
+
+    QQuickListView *listView = qobject_cast<QQuickListView *>(root.data());
+    QVERIFY(listView);
+    QCOMPARE(listView->count(), 3);
+    for (int i = 0; i < 3; ++i) {
+        QCOMPARE(listView->itemAtIndex(i)->property("text"), QVariant(QString::number(i)));
+    }
 }
 
 QTEST_MAIN(tst_qqmllistmodel)
